<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".RealtorActivity">

	<TextView
		android:id="@+id/textView"
		android:layout_width="267dp"
		android:layout_height="44dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/second_name"
		android:textSize="34sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="267dp"
		android:layout_height="44dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/number"
		android:textSize="34sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="267dp"
		android:layout_height="44dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/sum"
		android:textSize="34sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<ListView
		android:id="@+id/treaties"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:entries="@array/treaties"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

	<EditText
		android:id="@+id/secondName2"
		android:layout_height="53dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="39dp"
		android:layout_marginEnd="20dp"
		android:ems="10"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/second_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/treaties"
		android:layout_width="0dp"/>

	<EditText
		android:id="@+id/sum"
		android:layout_height="53dp"
		android:layout_width="0dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:ems="10"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/sum2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/secondName2"
		tools:ignore="TextFields" />

	<CheckBox
		android:id="@+id/checkBox2"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/delete_treaty"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/sum"
		android:layout_width="wrap_content"/>

	<Button
		android:id="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:text="@string/run"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/checkBox2"
		app:layout_constraintTop_toBottomOf="@+id/sum"
		android:onClick="run"/>

	<Button
		android:id="@+id/button3"
		android:layout_width="136dp"
		android:layout_height="67dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:text="@string/save"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/checkBox2"
		app:layout_constraintTop_toBottomOf="@+id/button2"
		android:onClick="save"/>
</androidx.constraintlayout.widget.ConstraintLayout>