<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<ListView
		android:id="@+id/realtors"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:entries="@array/names"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/secondName"
		android:layout_height="53dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="39dp"
		android:layout_marginEnd="20dp"
		android:ems="10"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/second_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/realtors"
		android:layout_width="0dp"/>

	<EditText
		android:id="@+id/phone"
		android:layout_height="53dp"
		android:layout_width="0dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:ems="10"
		android:importantForAutofill="no"
		android:inputType="textPersonName"
		android:text="@string/number"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/secondName"
		tools:ignore="TextFields" />

	<CheckBox
		android:id="@+id/checkBox"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:text="@string/delete_realtor"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/phone"
		android:layout_width="wrap_content"/>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:text="@string/run"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/checkBox"
		app:layout_constraintTop_toBottomOf="@+id/phone"
		android:onClick="run"/>

	<Button
		android:id="@+id/button5"
		android:layout_width="136dp"
		android:layout_height="67dp"
		android:layout_marginStart="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:onClick="save"
		android:text="@string/saveAgency"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/checkBox"
		app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>